[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://scripts/ui/results_screen.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.15, 0.95)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_left = 10
corner_radius_bottom_right = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
bg_color = Color(0.2, 0.2, 0.25, 0.8)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_left = 5
corner_radius_bottom_right = 5

[node name="ResultsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0, 0.0, 0.0, 0.8)

[node name="ResultContainer" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="ResultLabel" type="Label" parent="ResultContainer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 30.0
offset_right = 100.0
offset_bottom = 80.0
text = "VICTORY!"
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1

[node name="CrownDisplay" type="HBoxContainer" parent="ResultContainer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 100.0
offset_right = 150.0
offset_bottom = 150.0
theme_override_constants/separation = 30
alignment = 1

[node name="PlayerCrowns" type="Label" parent="ResultContainer/CrownDisplay"]
layout_mode = 2
text = "3 üëë"
theme_override_font_sizes/font_size = 32

[node name="VersusLabel" type="Label" parent="ResultContainer/CrownDisplay"]
layout_mode = 2
text = "VS"
theme_override_font_sizes/font_size = 24

[node name="EnemyCrowns" type="Label" parent="ResultContainer/CrownDisplay"]
layout_mode = 2
text = "0 üëë"
theme_override_font_sizes/font_size = 32

[node name="TrophyContainer" type="VBoxContainer" parent="ResultContainer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 170.0
offset_right = 150.0
offset_bottom = 250.0
theme_override_constants/separation = 10
alignment = 1

[node name="TrophyChangeLabel" type="Label" parent="ResultContainer/TrophyContainer"]
layout_mode = 2
text = "+30 üèÜ"
theme_override_font_sizes/font_size = 28
horizontal_alignment = 1

[node name="CurrentTrophiesLabel" type="Label" parent="ResultContainer/TrophyContainer"]
layout_mode = 2
text = "Trophies: 1530"
theme_override_font_sizes/font_size = 18
horizontal_alignment = 1

[node name="TrophyProgressBar" type="ProgressBar" parent="ResultContainer/TrophyContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 20)
max_value = 1.0
value = 0.3
show_percentage = false

[node name="RewardsContainer" type="VBoxContainer" parent="ResultContainer"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 270.0
offset_right = 150.0
offset_bottom = 400.0
theme_override_constants/separation = 10

[node name="RewardsTitle" type="Label" parent="ResultContainer/RewardsContainer"]
layout_mode = 2
text = "REWARDS"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1

[node name="GoldReward" type="HBoxContainer" parent="ResultContainer/RewardsContainer"]
layout_mode = 2
alignment = 1

[node name="GoldIcon" type="Label" parent="ResultContainer/RewardsContainer/GoldReward"]
layout_mode = 2
text = "üí∞"
theme_override_font_sizes/font_size = 24

[node name="AmountLabel" type="Label" parent="ResultContainer/RewardsContainer/GoldReward"]
layout_mode = 2
text = "50 Gold"
theme_override_font_sizes/font_size = 18

[node name="ChestReward" type="HBoxContainer" parent="ResultContainer/RewardsContainer"]
layout_mode = 2
alignment = 1

[node name="ChestIcon" type="ColorRect" parent="ResultContainer/RewardsContainer/ChestReward"]
layout_mode = 2
custom_minimum_size = Vector2(30, 30)
color = Color(0.7, 0.7, 0.7, 1.0)

[node name="ChestTypeLabel" type="Label" parent="ResultContainer/RewardsContainer/ChestReward"]
layout_mode = 2
text = "Silver Chest"
theme_override_font_sizes/font_size = 18

[node name="CrownChestProgress" type="ProgressBar" parent="ResultContainer/RewardsContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 25)
max_value = 1.0
value = 0.3
show_percentage = false

[node name="CrownLabel" type="Label" parent="ResultContainer/RewardsContainer/CrownChestProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Crown Chest: 3/10"
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.85
anchor_right = 0.5
anchor_bottom = 0.92
offset_left = -200.0
offset_right = 200.0
theme_override_constants/separation = 20
alignment = 1

[node name="HomeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
text = "HOME"
theme_override_font_sizes/font_size = 16

[node name="RematchButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(100, 50)
text = "REMATCH"
theme_override_font_sizes/font_size = 18

[node name="ReplayButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
text = "REPLAY"
theme_override_font_sizes/font_size = 14

[node name="ShareButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
custom_minimum_size = Vector2(80, 40)
text = "SHARE"
theme_override_font_sizes/font_size = 14

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="VictoryParticles" type="CPUParticles2D" parent="."]
position = Vector2(512, 300)
emitting = false
amount = 50
lifetime = 2.0
emission_shape = 1
emission_sphere_radius = 100.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
gravity = Vector2(0, 200)
scale_amount_min = 0.5
scale_amount_max = 2.0
color = Color(1.0, 0.8, 0.0, 1.0)